[tool.poetry]
name = "repl-nix-cp2023ag4"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_cp2023ag4"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
gevent = "^23.9.1"
waitress = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
